# tapesorter

./: CMakeLists.txt  ExternalTapeSorter.cpp  ExternalTapeSorter.hpp  FileTape.cpp  FileTape.hpp  ITape.hpp  README.md  doc.txt  main.cpp  manual_test.sh
tests/: CMakeLists.txt  tests_sort.cpp  tests_tapes.cpp
tools/: check_sorted.cpp  generate_input.cpp
